test/razor.test.views/errors/findPartial_partialViewNotFound.raz
<!--[#2.5]-->
@{
    
    Html.layout = Model.layout;
}
<h1>findPartial_partialViewNotFound.raz</h1>
